# spotstac

./: .gitignore  .pre-commit-config.yaml  Build_STAC.ipynb  README.md  pyproject.toml
spotstac/: __init__.py  geobase_ftp.py  spotstac.py  stac_templates.py  utils.py
tests/: test_spotstac.py
